--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,19 @@
   <artifactId>miniomigration</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>Minio to Odilon migration</name>
-  <description>	</description>
+  <description>
+	  This program migrates a Minio Server to Odilon
+	  It is a multithreaded gateway that iterates reading a buffer of items from Minio and sending them in parallel to Odilon.
+      The client version of the Minio SDK used here is 6.0.13.
+	  The API methods may be different for newer versions of the Minio SDK
+	  Note that some objectName may be valid for Minio but not for Odilon, in those cases the migration process converts the objectName into a Odilon supported objectName. The list of objectNames converted is ./logs/bucket-object.log
+  </description>
 
 <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	
 	<commons-io-version>2.15.1</commons-io-version> 		<!--  12 /2023  -->
-    <disruptor-version>3.4.4</disruptor-version> 			<!--  01 /2024 version 4.0.0 no funciono con LogManager  --> 
+    <disruptor-version>3.4.4</disruptor-version> 			<!--  01 /2024 version 4.0.0 did not work with LogManager  --> 
 	<java-version>11</java-version>
 	<javax.annotation-api.version>1.3.2</javax.annotation-api.version>
 	<log4j2-version>2.22.1</log4j2-version> 		<!--  01 /2024  -->
@@ -20,7 +26,10 @@
     <maven.compiler.target>11</maven.compiler.target>
 	<maven-javadoc-plugin-version>3.4.1</maven-javadoc-plugin-version>
 	<maven-jar-plugin-version>3.3.0</maven-jar-plugin-version>
+	
+	<minio-version>6.0.13</minio-version>
 	<odilon-version>1.1-beta</odilon-version>
+	
   </properties>
 
 	<developers>
@@ -52,16 +61,10 @@
 			<version>${odilon-version}</version>
 		</dependency>
 		
-    	<!--dependency>
-			<groupId>io.odilon</groupId>
-			<artifactId>odilon-model</artifactId>			
-			<version>${odilon-version}</version>
-		</dependency -->
-
 		<dependency>
 			<groupId>io.minio</groupId>
 			<artifactId>minio</artifactId>
-			<version>6.0.13</version>
+			<version>${minio-version}</version>
 			<exclusions>
 				<exclusion>
 					<groupId>com.google.code.findbugs</groupId>
